# warehouse_accounting_system

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  compile_commands.json  default_back_settings.json  docker-compose.yml  docker.sh  todo
back/: BUILD.bazel  common_variables.bzl  main.cpp
back/component/locator/: BUILD.bazel
back/component/locator/include/locator/: service_locator_factory.h
back/component/tracer/: BUILD.bazel
back/component/tracer/include/tracer/: tracer.h
back/component/tracer/source/: trace_collector.cpp  trace_collector.h  trace_message.cpp  trace_message.h  trace_writer.h  tracer.cpp  tracer.h
back/components/: README.md
back/components/authorizer/: BUILD.bazel
back/components/authorizer/include/authorizer/: authorizer.h
back/components/authorizer/source/: authorizer.cpp  authorizer.h  hash.cpp  hash.h
back/components/db_connector/: BUILD.bazel
back/components/db_connector/include/db_connector/: accessor.h
back/components/db_connector/source/: accessor.cpp  accessor.h
back/components/db_connector/source/scripts/: check_valid.h  initialize.h
back/components/task_manager/: BUILD.bazel
back/components/task_manager/include/task_manager/: callback.h  task.h  task_identificator.h  task_info.h  task_manager.h
back/components/task_manager/protocol/get_filtered_requirement/: request.json
back/components/task_manager/protocol/get_project_info/: response.json
back/components/task_manager/protocol/get_specifications/: request.json
back/components/task_manager/source/: task.cpp  task.h  task_handler.cpp  task_handler.h  task_manager.cpp  task_manager.h  workers_manager.cpp  workers_manager.h
back/components/task_manager/source/dependency_manager/: BUILD.bazel
back/components/task_manager/source/tasks/: BUILD.bazel
back/components/task_manager/test/: test_authorization.cpp
back/components/webserver/: BUILD.bazel
back/components/webserver/include/webserver/: server.h
back/components/webserver/protocol/: README.md  status_information.txt
back/components/webserver/protocol/ authorization/: auth_request.json  auth_response.xsd  response.json
back/components/webserver/protocol/add_req_in_spec/: request.json  request.xsd
back/components/webserver/protocol/add_user/: add_user_request.xsd
back/components/webserver/protocol/create_dependency/: request.json  request.xsd
back/components/webserver/protocol/create_requirement/: request.json  request.xsd
back/components/webserver/protocol/create_specification/: request.json  request.xsd
back/components/webserver/protocol/get_filtered_requirement/: request.json  response.json
back/components/webserver/protocol/get_project_info/: get_project_info_response.xsd  response.json
back/components/webserver/protocol/get_projects/: get_projects_response.xsd  response.json
back/components/webserver/protocol/get_related_requirements/: request.json  response.json
back/components/webserver/protocol/get_requirement_in_proj/: get_requirement_in_proj_request.xsd
back/components/webserver/protocol/get_requirement_in_spec/: response.json
back/components/webserver/protocol/get_requirement_info/: request.xsd  response.json
back/components/webserver/protocol/get_specification_info/: get_specification_info_response.xsd  request.json  response.json
back/components/webserver/protocol/get_specifications/: response.json
back/components/webserver/source/: listener.cpp  listener.h  server.cpp  server.h  server_certificate.h  session.h  session_factory.cpp  session_factory.h  worker.h
back/include/ifaces/: service_locator.h  tracer.h
back/instrumental/include/instrumental/: check.h  common.h  interface.h  serialized_enum.h  settings.h  settings_detail.h  string_converters.h  time.h  tracer.h  types.h  user.h
back/services/: BUILD.bazel  README.md
back/services/authorizer/: BUILD.bazel
back/services/authorizer/source/: authorizer.cpp  authorizer.h
back/services/config_reader/: BUILD.bazel
back/services/config_reader/source/: basic_config_reader.cpp  basic_config_reader.h  json_config_reader.cpp  json_config_reader.h
back/services/date_provider/: BUILD.bazel
back/services/date_provider/source/: date_provider.cpp  date_provider.h
back/services/date_provider/test/: test_date_iso.cpp
back/services/db_connector/: BUILD.bazel
back/services/db_connector/source/: accessor.cpp  accessor.h  connection_options.cpp  connection_options.h
back/services/db_connector/test/: query_serialization.cpp  test_connection_options.cpp  test_delete_query.cpp  test_insert_query.cpp  test_insert_query_serialization.cpp  test_query_serialization.cpp  test_raw_query.cpp  test_raw_query_serialization.cpp  test_select_query.cpp  test_select_query_serialization.cpp  test_update_query.cpp
back/services/document_manager/: BUILD.bazel
back/services/document_manager/source/: document_manager.cpp  document_manager.h
back/services/environment/: BUILD.bazel
back/services/environment/source/: environment.cpp  environment.h
back/services/impls/tracer/: BUILD.bazel
back/services/locator/: BUILD.bazel  README.md
back/services/locator/mock/: service_locator_mock.h
back/services/locator/source/: service_locator.cpp  service_locator.h
back/services/settings_provider/: BUILD.bazel
back/services/settings_provider/source/: config_reader.cpp  config_reader.h  settings_provider.cpp  settings_provider.h
back/services/tracer/: BUILD.bazel
back/services/tracer/source/: trace_collector.cpp  trace_collector.h  trace_message.cpp  trace_message.h  trace_writer.cpp  trace_writer.h  tracer.cpp  tracer.h
back/utilities/: BUILD.bazel  README.md
back/utilities/document_manager/: BUILD.bazel
back/utilities/document_manager/source/: document_manager.cpp  document_manager.h
back/utilities/hash/: BUILD.bazel
back/utilities/hash/include/hash/: hash.h
back/utilities/hash/source/: hash.cpp
back/utilities/hash/test/: test_hash.cpp
back/utilities/holders/: service_locator_holder.h  tracer_holder.h
back/utilities/json/: BUILD.bazel
(+331 files in other folders)
