platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@@platforms//cpu:x86_64",
        "@@platforms//os:windows",
        "@@bazel_tools//tools/cpp:clang-cl",
    ],
)

platform(
    name = "x64_linux-clang",
    constraint_values = [
        "@@platforms//cpu:x86_64",
        "@@platforms//os:linux",
        "@@bazel_tools//tools/cpp:clang",
    ],
)
