load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "jwt",
    lib_source = "@Thalhammer_jwt//:all_srcs",
    linkopts = ["-lm"],
    out_headers_only = True,
    tags = ["requires-network"],
    visibility = ["//visibility:public"],
)

cmake(
    name = "libpqxx",
    lib_source = "@jtv_libpqxx//:all_srcs",
    linkopts = [
        "-lpq",
        "-lm",
    ],
    tags = ["requires-network"],
    visibility = ["//visibility:public"],
)
