"""
code 314
"""

module(
    name = "requirement_management_system",
    version = "0.1.0",
)

### external deps

# JSON parser
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# cmake integration
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

# fmt
bazel_dep(name = "fmt", version = "10.2.1")

### llvm toolchain

bazel_dep(name = "toolchains_llvm", version = "1.1.2")
git_override(
    module_name = "toolchains_llvm",
    commit = "e0ffa169a2572e9f35a52de60fe746831d1e2a0a",
    remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

LLVM_VERSIONS = {
    "": "16.0.0",  # Default version 16.0.0
}

llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = LLVM_VERSIONS,
)

use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")
