cc_binary(
    name = "rms314",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//back/components/authorizer:lib",
        "//back/components/db_connector:lib",
        "//back/components/task_manager:lib",
        "//back/components/webserver:lib",
        "//back/services/locator:iface",
        "//back/services/locator:lib",
        "//back/services/tracer:iface",
    ],
)
