cc_library(
    name = "locator",
    srcs = glob([
        "locator/source/**/*.cpp",
        "locator/source/**/*.h",
    ]),
    hdrs = glob([
        "locator/include/**/*.h",
    ]),
    includes = ["./locator/include"],
    visibility = ["//visibility:public"],
    deps = [
        "//back:ifaces",
        "//back/instrumental:include",
        "//back/services/impls/tracer",
    ],
)
