package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/components/db_connector:iface",
        "//back/instrumental:include",
    ],
)

cc_library(
    name = "hash",
    srcs = ["source/hash.cpp"],
    hdrs = ["source/hash.h"],
    includes = ["./include"],
    deps = [
        "//back/instrumental:include",
        "@openssl//:ssl",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//:jwt",
        "//back/services/date_provider:iface",
        "//back/services/locator:iface",
        "//back/services/tracer:iface",
    ],
)
