package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "data",
    hdrs = glob([
        "include/**/data/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/instrumental:include",
        "//back/services/locator:iface",
    ],
)

cc_library(
    name = "iface",
    hdrs = glob(
        [
            "include/**/*.h",
        ],
        exclude = glob(["include/**/data/*.h"]),
    ),
    includes = ["./include"],
    deps = [
        ":data",
        "//back/instrumental:include",
        "//back/services/locator:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//:libpqxx",
        "//back/services/settings_provider:iface",
        "//back/services/tracer:iface",
        "@fmt",
    ],
)
