package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "callback",
    hdrs = glob(
        [
            "include/**/callback.h",
        ],
    ),
    includes = ["./include"],
    deps = [
        "//back/instrumental:include",
    ],
)

cc_library(
    name = "iface",
    hdrs = glob(
        [
            "include/**/*.h",
        ],
        exclude = ["include/**/callback.h"],
    ),
    includes = ["./include"],
    deps = [
        ":callback",
        "//back/instrumental:include",
        "//back/services/authorizer:iface",
        "//back/services/locator:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//back/components/task_manager/source/tasks:task_list",
        "//back/services/authorizer:iface",
        "//back/services/db_connector:iface",
        "//back/services/document_manager:iface",
        "//back/services/tracer:iface",
        "@nlohmann_json//:json",
    ],
)
