package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/instrumental:include",
        "//back/services/authorizer:iface",
        "//back/services/locator:iface",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//back/components/task_manager/source/tasks:task_list",
        "//back/services/authorizer:iface",
        "//back/services/db_connector:iface",
        "//back/services/document_manager:iface",
        "//back/services/tracer:iface",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "test",
    srcs = glob([
        "test/**/*.h",
        "test/**/*.cpp",
    ]),
    deps = [
        ":iface",
        ":lib",
        "//back/services/authorizer:mock",
        "//back/services/locator:mock",
        "//back/services/tracer:mock",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@nlohmann_json//:json",
    ],
)
