package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/components/authorizer:iface",
        "//back/components/task_manager:iface",
        "//back/instrumental:include",
        "//back/services/locator:iface",
        "//back/utilities/document_manager:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//back/components/task_manager:lib",  # parse tasks
        "//back/services/locator:iface",
        "//back/services/settings_provider:iface",
        "//back/services/tracer:iface",
        "@boost//:asio_ssl",
        "@boost//:beast",
    ],
)
