package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/services/locator:iface",
        "@fmt",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//:jwt",
        "//back/services/date_provider:iface",
        "//back/services/db_connector:iface",
        "//back/services/locator:iface",
        "//back/services/tracer:iface",
    ],
)
