package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//:libpqxx",
        "//back/services/locator:iface",
        "//back/services/tracer:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//:libpqxx",
        "//back/services/db_connector/source/connection:iface",
        "//back/services/db_connector/source/query:iface",
        "//back/services/db_connector/source/transaction:iface",
        "//back/services/settings_provider:iface",
        "//back/services/tracer:iface",
        "@fmt",
    ],
)
