package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//:libpqxx",
        "//back/services/locator:iface",
        "//back/services/tracer:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//:libpqxx",
        "//back/services/db_connector/source/connection:lib",
        "//back/services/db_connector/source/query:lib",
        "//back/services/db_connector/source/transaction:lib",
        "//back/services/settings_provider:iface",
        "//back/services/tracer:iface",
        "@fmt",
    ],
)

cc_binary(
    name = "test",
    srcs = glob([
        "test/**/*.h",
        "test/**/*.cpp",
    ]),
    deps = [
        ":iface",
        ":lib",
        "//back/services/tracer:mock",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
