package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob(
        [
            "include/**/*.h",
        ],
        exclude = ["include/tracer/tracer_lazy_provider.h"],
    ),
    includes = ["./include"],
    deps = [
        "//back/services/locator:iface",
    ],
)

cc_library(
    name = "lazy_provider_iface",
    hdrs = ["include/tracer/tracer_lazy_provider.h"],
    includes = ["./include"],
    visibility = ["//back/services:__subpackages__"],
    deps = [
        ":iface",
        "//back/services/locator:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//back/services/date_provider:iface",
        "//back/services/environment:iface",
        "//back/services/locator:iface",
        "//back/services/settings_provider:iface",
    ],
)
