package(default_visibility = ["//back:__subpackages__"])

cc_library(
    name = "hash",
    srcs = glob([
        "source/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/instrumental:include",
        "@openssl//:ssl",
    ],
)

cc_binary(
    name = "test",
    srcs = glob([
        "test/**/*.cpp",
    ]),
    deps = [
        ":hash",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
