package(default_visibility = ["//back/components/task_manager:__subpackages__"])

cc_library(
    name = "base",
    srcs = glob([
        "include/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/components/task_manager:callback",
        "//back/instrumental:include",
        "//back/services/authorizer:iface",
        "//back/services/tracer:iface",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "task_list",
    srcs = glob([
        "protocol/**/*.cpp",
    ]),
    hdrs = glob([
        "protocol/**/*.h",
    ]),
    includes = ["."],
    deps = [
        ":base",
        "//back/services/tracer:iface",
        "//back/utilities/hash",
    ],
)
