package(default_visibility = ["//back/components/task_manager:__subpackages__"])

cc_library(
    name = "base",
    srcs = glob([
        "include/**/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/components/task_manager:iface",
        "//back/instrumental:include",
        "//back/services/authorizer:iface",
        "//back/services/date_provider:iface",
        "//back/services/db_connector:iface",
        "//back/services/tracer:iface",
        "//back/utilities/json",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "task_list",
    srcs = glob([
        "protocol/**/*.cpp",
    ]),
    hdrs = glob([
        "protocol/**/*.h",
    ]),
    includes = ["."],
    deps = [
        ":base",
        "//back/services/tracer:iface",
        "//back/utilities/hash",
    ],
)
