package(default_visibility = ["//back/components/webserver:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//back/components/task_manager:iface",
        "//back/components/webserver:iface",
        "//back/instrumental:include",
        "//back/services/locator:iface",
        "@boost//:asio",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//back/components/task_manager:iface",
        "//back/components/webserver:iface",
        "//back/instrumental:include",
        "//back/services/authorizer:iface",
        "//back/services/document_manager:iface",
        "//back/services/locator:iface",
        "//back/services/tracer:iface",
        "@boost//:asio_ssl",
        "@boost//:beast",
        "@nlohmann_json//:json",
    ],
)
