package(default_visibility = ["//back/services/db_connector:__subpackages__"])

cc_library(
    name = "iface",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["./include"],
    deps = [
        "//:libpqxx",
        "//back/instrumental:include",
        "//back/services/db_connector:iface",
        "//back/services/locator:iface",
    ],
)

cc_library(
    name = "lib",
    srcs = glob([
        "source/**/*.h",
        "source/**/*.cpp",
    ]),
    deps = [
        ":iface",
        "//:libpqxx",
        "//back/services/settings_provider:iface",
        "//back/services/tracer:iface",
    ],
)
